src/Javafe/trunk/Javafe/test/javafe/test/fe/test14/Package2.java
// Test illegal import statements

import p.NoSuchPackage.q.*;	// error

class Package2 {}
